# localization

./: run_docker.sh
c3-project/: CMakeLists.txt  c3-main.cpp  helper.cpp  helper.h  tasks.cpp  tasks.hpp
data1/: 0.pcd  1.pcd  10.pcd  100.pcd  100.txt  101.pcd  101.txt  102.pcd  102.txt  103.pcd  103.txt  104.pcd  104.txt  105.pcd  105.txt  106.pcd  106.txt  107.pcd  107.txt  108.pcd  108.txt  109.pcd  109.txt  11.pcd  110.pcd  110.txt  111.pcd  111.txt  112.pcd  112.txt  113.pcd  113.txt  114.pcd  114.txt  115.pcd  115.txt  116.pcd  116.txt  117.pcd  117.txt  (+512 more)
data2/: 0.pcd  1.pcd  10.pcd  100.pcd  100.txt  101.pcd  101.txt  102.pcd  102.txt  103.pcd  103.txt  104.pcd  104.txt  105.pcd  105.txt  106.pcd  106.txt  107.pcd  107.txt  108.pcd  108.txt  109.pcd  109.txt  11.pcd  110.pcd  110.txt  111.pcd  111.txt  112.pcd  112.txt  113.pcd  113.txt  114.pcd  114.txt  115.pcd  115.txt  116.pcd  116.txt  117.pcd  117.txt  (+634 more)
data3/: 0.pcd  1.pcd  10.pcd  10.txt  11.pcd  11.txt  12.pcd  12.txt  13.pcd  13.txt  14.pcd  14.txt  15.pcd  15.txt  16.pcd  16.txt  17.pcd  17.txt  18.pcd  18.txt  19.pcd  19.txt  2.pcd  20.pcd  20.txt  21.pcd  21.txt  22.pcd  22.txt  23.pcd  23.txt  24.pcd  25.pcd  25.txt  26.pcd  26.txt  27.pcd  27.txt  28.pcd  28.txt  (+82 more)
test/: CMakeLists.txt  helper.cpp  helper.h  tasks.cpp  tasks.hpp  test.cpp
